src/objects/TokenPSI__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_id__c</fullName>
        <label>Client_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_secret__c</fullName>
        <label>Client_secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>Se apunta el Content-Type que espera PSI al pedir el token.</description>
        <label>Content-Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_type__c</fullName>
        <label>Grant_type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TokenPSI</label>
    <pluralLabel>TokensPSI</pluralLabel>
</CustomObject>